rust/tests/errors/unclosed_async_with.hyper
conn: object

---

async with conn as c:
    <div>{c}</div>
